test/sema/positive/super_traits2.impala
trait T {
    fn f(self: Self) -> Self;
}
trait U : T {}

impl U for i32 {
    fn f(self: i32) -> i32 { self }
}
