test/sema/negative/trait_impls1.impala
trait T {
   fn f(self: Self) -> int32;
}
impl T for bool {
   fn f(self: int32) -> int32 {
      self
   }
}
